qsbodypain/src/App.css
:root {
    --zeg-color-main: rgb(25, 131, 124);
    --zeg-color-sup: rgb(210, 237, 235);
    --plain-white: white;
}

.app {
    min-height: 100vh; /* Ensure the app fills at least the whole viewport height */
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 10px;
    box-sizing: border-box; /* Include padding in the element's total height */
}

.header {
    height: 12vh;
    font-family: "Arial", sans-serif;
    font-size: 1.5rem;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--plain-white);
    /*  padding: 10px 0; */
    background-color: black;
    width: 80%;
    max-width: 50rem;
    border-left: 0.5rem solid black;
    border-right: 0.5rem solid black;
}

.main-area {
    flex-grow: 1; /* Allow this area to grow and fill available space */
    background-color: var(--zeg-color-sup);
    width: 80%;
    max-width: 50rem;
    max-height: 75vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: auto;
    border-left: 0.5rem solid black;
    border-right: 0.5rem solid black;
}

.button-group {
    height: 10vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 80%;
    max-width: 50rem;
    background-color: black;
    border-left: 0.5rem solid black;
    border-right: 0.5rem solid black;
}

.header h1 {
    margin: 0;
}

svg {
    flex: 1 1 auto;
    width: 100%;
    max-height: 100%;
    height: auto;
}

.path-selected {
    fill: #e65954;
}

.transparent {
    fill: transparent;
}

.prompt {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 10vh;
    font-family: "Arial", sans-serif;
    font-size: 1.3em;
    color: var(--zeg-color-main);
    margin: 0px;
    text-align: center;
    padding: 0 20px;
}

.button {
    font-family: "Arial", sans-serif;
    background-color: var(--zeg-color-main);
    color: var(--plain-white);
    padding: 10px 20px;
    font-size: 1.3em;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
    font-weight: bold;
}

.button:hover {
    background-color: #0056b3;
}

@media (max-width: 800px) {
    .header,
    .main-area,
    .button-group {
        width: 100%;
    }

    :root {
        background-color: black;
    }

    .app {
        padding: 0;
    }

    .header {
        font-size: 1rem; /* Slightly smaller font size on smaller screens */
    }

    .prompt,
    .button-group button {
        font-size: 1rem; /* Adjust font sizes for better readability */
    }
}

